--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url='https://app.gptmaker.ai/widget/3DC32A2F7305A25687C58AE430F4B140/iframe'" />
-    <title>Redirecionando...</title>
+    <title>IA Chat</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f4f4f4;
+        }
+        iframe {
+            width: 90%;
+            height: 90vh;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <p>Se você não for redirecionado automaticamente, <a href="https://app.gptmaker.ai/widget/3DC32A2F7305A25687C58AE430F4B140/iframe">clique aqui</a>.</p>
+    <iframe src="https://app.gptmaker.ai/widget/3DC32A2F7305A25687C58AE430F4B140/iframe"></iframe>
 </body>
 </html>
